# copy-my-writing

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
data/: writing_samples.json
data/Keep/: #Bechain.json  #latenyt.json  2023-11-30T08_33_08.014+05_30.json  2023-11-30T08_33_09.299+05_30.json  2023-11-30T08_33_09.673+05_30.json  2023-11-30T08_33_10.850+05_30.json  2023-11-30T08_33_11.267+05_30.json  2023-11-30T08_33_12.505+05_30.json  2023-11-30T08_33_12.935+05_30.json  2023-11-30T08_33_14.228+05_30.json  2023-11-30T08_33_14.626+05_30.json  2023-11-30T08_33_16.736+05_30.json  2024-04-22T14_43_49.615+05_30.json  2024-06-30T23_38_46.329+05_30.json  One sided love.json  Reall.json  अरमान ए दास्तां!.json  अलफ़ाज़.json  आबरू.json  आहट.json  ए - प्यार.json  एक रात.json  एहसास - ए - प्यार.json  एहसास.json  ख्वाहिश(1).json  ख्वाहिश.json  गुस्सा और दोस्ती.json  दस्तक.json  दिल.json  बेवफाई.json  राह.json
data/KeepProcessed/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  28.json  3.json  31.json  33.json  34.json  35.json  36.json  39.json  4.json  45.json  5.json  6.json  7.json  8.json  9.json
logs/: .gitkeep
scripts/: generate_writing_sample.py  process_data.py
src/copy_my_writing/: cli.py  config.py  generator.py  logger.py  openai_service.py  style_analyzer.py
src/tests/: test_generator.py  test_openai_service.py  test_style_analyzer.py
