[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "copy-my-writing"
description = "A CLI tool for generating content based on personal writing style"
requires-python = ">=3.7"
dynamic = ["version"]

[tool.setuptools_scm]